Minor optimization in test case